--- a/css/style.scss
+++ b/css/style.scss
@@ -1,26 +1,26 @@
-.form {
-  margin: 2.5rem;
-  display: grid;
-  grid-template-columns: repeat(6, 1fr);
-  gap: 1rem;
-}
-
-
-.input_box {
-  height: 100%;
+.table {
   width: 100%;
-  word-wrap: break-word;
-  word-break: break-all;
 }
 
-.lession_box {
-  height: 15rem;
+.table,
+.table th,
+.table td {
+  border: 0.1rem solid black;
+  margin: 0;
+  border-collapse: collapse;
+}
 
+.table th {
+  background-color: rgb(104, 177, 104);
 }
 
 .time {
-  max-width: 5rem;
-  max-height: 15rem;
-  border: solid black;
-  padding: 0 1rem;
+  width: 5rem;
+}
+
+.input_box {
+  width: 99%;
+  height: 99%;
+  border: none;
+
 }
