--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,12 @@
   outline: solid 0.1rem #68b168;
 }
 
+
+.input_box {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.25rem;
+}
+
 .table {
   width: 100%;
 }
@@ -33,9 +39,27 @@
   height: 99%;
   border: none;
   resize: none;
+  border: black 0.1rem;
+}
+
+.Pirnt-btn {
+  margin: 1rem;
+  height: 2rem;
+  width: 5rem;
+  background-color: #68b168;
+  border: #68b168 solid 0.25rem;
+}
+
+.Pirnt-btn:hover {
+  background-color: #356c35;
+  border: #002700 solid 0.25rem;
 }
 
 @media print {
+  .Pirnt-btn {
+    display: none;
+  }
+
   .table th {
     -webkit-print-color-adjust: exact;
   }
